use stream's toList() method